--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,60 @@
     <title>GetSpigot</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="container">
-
+<body class="download-landing">
+    <div class="container download-container">
+        <h1>Get<b>Spigot</b></h1>
+        <div class="col-md-6">
+            <div class="download-box">
+                <ul class="download-box-toggle slider-toggle">
+                    <li data-content="spigot">Spigot</li>
+                    <li data-content="bungeecord">BungeeCord</li>
+                    <li class="focuser"></li>
+                </ul>
+                <div data-toggle="bungeecord" data-animate-in="fadeInLeft" data-animate-out="fadeOutRight" class="download-content">
+                    <p>
+                        Nunquam imperium musa. Sunt solitudoes tractare nobilis, fidelis deuses. Lotus tumultumques ducunt ad hippotoxota. Caculas experimentum, tanquam peritus lapsus. Barbatus ionicis tormentos ducunt ad hydra.
+                    </p>
+                    <p>
+                        Cur luba ortum? Fidelis fides aliquando gratias epos est. Hibridas peregrinationes! Vae, pars! Ubi est raptus buxum? Ferox hibrida absolute imperiums omnia est.
+                    </p>
+                    <p>
+                        Dexter zelus una demittos finis est. Peritus orgias ducunt ad scutum. Galluss sunt stellas de audax adelphis. A falsis, urbs noster bubo.
+                    </p>
+                </div>
+                <div data-toggle="spigot" data-animate-in="fadeInLeft" data-animate-out="fadeOutRight" class="download-content">
+                    <p>
+                        Nunquam imperium musa. Sunt solitudoes tractare nobilis, fidelis deuses. Lotus tumultumques ducunt ad hippotoxota. Caculas experimentum, tanquam peritus lapsus. Barbatus ionicis tormentos ducunt ad hydra.
+                    </p>
+                    <p>
+                        Cur luba ortum? Fidelis fides aliquando gratias epos est. Hibridas peregrinationes! Vae, pars! Ubi est raptus buxum? Ferox hibrida absolute imperiums omnia est.
+                    </p>
+                    <p>
+                        Dexter zelus una demittos finis est. Peritus orgias ducunt ad scutum. Galluss sunt stellas de audax adelphis. A falsis, urbs noster bubo.
+                    </p>
+                </div>
+                <div class="download-box-link" data-toggle="bungeecord" data-link="download.json">
+                    <div class="pull-left">Version 1.7.9</div>
+                    <h3>
+                        Download
+                        <small>4.56 Megabytes</small>
+                    </h3>
+                    <div class="pull-right">Build 555</div>
+                </div>
+                <div class="download-box-link" data-toggle="spigot" data-link="download.json">
+                    <div class="pull-left">Version 1.7.9</div>
+                    <h3>
+                        Download
+                        <small>12.3 Megabytes</small>
+                    </h3>
+                    <div class="pull-right">Build 1234</div>
+                </div>
+            </div>
+            <a href="">View More Builds</a>
+        </div>
     </div>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/spigotdl.js"></script>
 </body>
 </html>
