Finished out landing base GUI

--- a/src/auxilliary.html
+++ b/src/auxilliary.html
@@ -3,4 +3,5 @@
 
     <div class="animated fadeOutRight"></div>
     <div class="animated fadeInLeft"></div>
+    <div class="animated pulse"></div>
 </body>
