--- a/src/overview.html
+++ b/src/overview.html
@@ -16,15 +16,15 @@
                     <a href="">Read More</a>
                 </div>
                 <ul class="overview-list">
-                    <% for (var i = 9085; i > 9082; i--) {%>
+                    <% for (var i = 9085; i > 9080; i--) {%>
                     <li>
                         <a href="">
-                            <span class="col-sm-4 build-number"><small>Build</small> #9084</span>
+                            <span class="col-sm-4 build-number"><small>Build</small> #<%= i %></span>
                             <span class="overview-build col-sm-4">
                                 <i class="checkmark overview-build-success">Y</i>
                                 Build Success
                             </span>
-                            <span class="btn btn-default btn-sm col-sm-4">
+                            <span class="btn btn-default btn-sm col-sm-4 btn-download">
                                 Download
                             </span>
                         </a>
@@ -41,15 +41,15 @@
                     <a href="">Read More</a>
                 </div>
                 <ul class="overview-list">
-                    <% for (var i = 9085; i > 9082; i--) {%>
+                    <% for (var i = 9085; i > 9080; i--) {%>
                     <li>
                         <a href="">
-                            <span class="col-sm-4 build-number"><small>Build</small> #9084</span>
+                            <span class="col-sm-4 build-number"><small>Build</small> #<%= i %></span>
                             <span class="overview-build col-sm-4">
                                 <i class="checkmark overview-build-success">Y</i>
                                 Build Success
                             </span>
-                            <span class="btn btn-default btn-sm col-sm-4">
+                            <span class="btn btn-default btn-sm col-sm-4 btn-download">
                                 Download
                             </span>
                         </a>
