Icons and touchups

--- a/src/listing.html
+++ b/src/listing.html
@@ -9,7 +9,7 @@
 <%- include spigot_header.html %>
 <div class="container">
     <h1 class="listing-title">Spigot</h1>
-    <div class="listing-item listing-top row">
+    <div class="listing-item listing-top row" onclick="window.location=''">
         <span class="listing-label">Latest Build</span>
         <div class="col-sm-3 text-center">
             <div class="build-number">
@@ -25,40 +25,39 @@
             <p>Sunt liberies promissio rusticus, neuter indexes. Pol. Pol, placidus quadra! Ecce, castus idoleum! Elevatus talis index est. Gemna de gratis bulla, acquirere detrius! Nuptias cantare, tanquam secundus torus.</p>
         </div>
         <div class="col-sm-2">
-            <button class="btn btn-block btn-default btn-sm btn-download">
+            <a class="btn btn-block btn-default btn-sm btn-download">
                 Download
-            </button>
+            </a>
             <button class="btn btn-block btn-lightdash btn-sm js-copy" data-clipboard-text="md5sum" data-aftercopy="md5copied">
-                MD5 Checksum
+                <i class="icon icon-copy"></i> MD5 Checksum
             </button>
         </div>
         <div class="clearfix"></div>
     </div>
-    <% for (var i = 9085; i > 9080; i--) {%>
-    <div class="listing-item row">
-        <div class="col-sm-3 text-center">
-            <div class="build-number">
-                #<%= i %> <small>3a18a7f2</small>
-            </div>
+    <div>
+        <% for (var i = 9085; i > 9080; i--) {%>
+        <div class="listing-item row" onclick="window.location=''">
+            <div class="col-sm-3 text-center">
+                <div class="build-number">
+                    #<%= i %> <small>3a18a7f2</small>
+                </div>
             <span class="overview-build">
                 Build
                 <span class="overview-build-success">Passed</span>
                 6 Hours Ago
             </span>
+            </div>
+            <div class="col-sm-7">
+                <p>Sunt liberies promissio rusticus, neuter indexes. Pol. Pol, placidus quadra! Ecce, castus idoleum! Elevatus talis index est. Gemna de gratis bulla, acquirere detrius! Nuptias cantare, tanquam secundus torus.</p>
+            </div>
+            <div class="col-sm-2">
+                <a class="btn btn-block btn-default btn-sm btn-download">
+                    Download
+                </a>
+            </div>
         </div>
-        <div class="col-sm-7">
-            <p>Sunt liberies promissio rusticus, neuter indexes. Pol. Pol, placidus quadra! Ecce, castus idoleum! Elevatus talis index est. Gemna de gratis bulla, acquirere detrius! Nuptias cantare, tanquam secundus torus.</p>
-        </div>
-        <div class="col-sm-2">
-            <button class="btn btn-block btn-default btn-sm btn-download">
-                Download
-            </button>
-            <button class="btn btn-block btn-lightdash btn-sm js-copy" data-clipboard-text="md5sum" data-aftercopy="md5copied">
-                MD5 Checksum
-            </button>
-        </div>
+        <% } %>
     </div>
-    <% } %>
     <div class="text-center">
         <ul class="pagination">
             <li class="disabled"><a href="#">&laquo;</a></li>
