--- a/src/overview.html
+++ b/src/overview.html
@@ -21,7 +21,7 @@
                         <a href="">
                             <span class="col-sm-4 build-number"><small>Build</small> #<%= i %></span>
                             <span class="overview-build col-sm-4">
-                                <i class="checkmark overview-build-success">Y</i>
+                                <i class="icon icon-checkmark overview-build-success"></i>&nbsp;
                                 Build Success
                             </span>
                             <span class="btn btn-default btn-sm col-sm-4 btn-download">
@@ -46,7 +46,7 @@
                         <a href="">
                             <span class="col-sm-4 build-number"><small>Build</small> #<%= i %></span>
                             <span class="overview-build col-sm-4">
-                                <i class="checkmark overview-build-success">Y</i>
+                                <i class="icon icon-checkmark overview-build-success"></i>&nbsp;
                                 Build Success
                             </span>
                             <span class="btn btn-default btn-sm col-sm-4 btn-download">
