--- a/src/spigot_header.html
+++ b/src/spigot_header.html
@@ -26,11 +26,11 @@
                                 <div class="navTabs">
                                     <div class="container">
                                         <div id="searchBar" class="hasSearchButton">
-                                            <span id="QuickSearchPlaceholder" class="fa fa-search" title="Search"></span>
+                                            <span id="QuickSearchPlaceholder" class="icon icon-search" title="Search"></span>
                                             <fieldset id="QuickSearch">
                                                 <form action="http://www.spigotmc.org/search/search" method="post" class="formPopup">
                                                     <div class="primaryControls">
-                                                        <span class="fa fa-search"></span>
+                                                        <span class="icon icon-search"></span>
                                                         <input type="search" name="keywords" value="" class="textCtrl" placeholder="Search..." results="0" title="Enter your search and hit enter" id="QuickSearchQuery">
                                                     </div>
                                                     <input type="hidden" name="_xfToken" value="">
