Fix input post-copy class getting uncssed out!

--- a/src/auxilliary.html
+++ b/src/auxilliary.html
@@ -4,4 +4,7 @@
     <div class="animated fadeOutRight"></div>
     <div class="animated fadeInLeft"></div>
     <div class="animated pulse"></div>
+    <div class="input-copy js-copy copied" data-clipboard-text="http://foo.example.com/build1324.jar" data-aftercopy="inputCopied">
+        <input type="text" class="form-control" value="http://foo.example.com/build1324.jar">
+    </div>
 </body>
